5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1585_1017.log
== TEST (2019-03-28 11:43:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from mach import *
t1 = radians(float(input("latitude de p1: ")))
t2 = radians(float(input("longitude de p1: ")))
t3 = radians(float(input("latitude de p2: ")))
t4 = radians(float(input("longitude de p2: ")))
r = 6371,01
d = r*arccos(sin*(t1)*sin(t2)+cos(t1)*cos(t2))
print(d)

-- ERROR:
File "XXXX", line 9
    r = 6371,01
              ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:44:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from mach import *
t1 = radians(float(input("latitude de p1: ")))
t2 = radians(float(input("longitude de p1: ")))
t3 = radians(float(input("latitude de p2: ")))
t4 = radians(float(input("longitude de p2: ")))
r = 6371,01
d = r*arccos(sin*(t1)*sin(t2)+cos(t1)*cos(t2))
print(d)

-- ERROR:
File "XXXX", line 9
    r = 6371,01
              ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:44:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from mach import *
t1 = radians(float(input("latitude de p1: ")))
t2 = radians(float(input("longitude de p1: ")))
t3 = radians(float(input("latitude de p2: ")))
t4 = radians(float(input("longitude de p2: ")))
r = 6371,01
d = r*acos(sin*(t1)*sin(t2)+cos(t1)*cos(t2))
print(d)

-- ERROR:
File "XXXX", line 9
    r = 6371,01
              ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:44:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from mach import *
t1 = radians(float(input("latitude de p1: ")))
t2 = radians(float(input("longitude de p1: ")))
t3 = radians(float(input("latitude de p2: ")))
t4 = radians(float(input("longitude de p2: ")))
r = 6371,01
d = r*acos(sin*(t1)*sin(t2)+cos(t1)*cos(t2))
print(d)

-- ERROR:
File "XXXX", line 9
    r = 6371,01
              ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:44:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from mach import *
t1 = radians(float(input("latitude de p1: ")))
t2 = radians(float(input("longitude de p1: ")))
t3 = radians(float(input("latitude de p2: ")))
t4 = radians(float(input("longitude de p2: ")))
r = 6371,01
d = r*acos(sin*(t1)*sin(t2)+cos(t1)*cos(t2))
print(d)

-- ERROR:
File "XXXX", line 9
    r = 6371,01
              ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:51:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from mach import *
t1 = radians(float(input("latitude de p1: ")))
t2 = radians(float(input("longitude de p1: ")))
t3 = radians(float(input("latitude de p2: ")))
t4 = radians(float(input("longitude de p2: ")))
r = 6371.01
d = r*acos(sin*(t1)*sin(t2)+cos(t1)*cos(t2))
print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from mach import *
ModuleNotFoundError: No module named 'mach'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:51:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("latitude de p1: ")))
t2 = radians(float(input("longitude de p1: ")))
t3 = radians(float(input("latitude de p2: ")))
t4 = radians(float(input("longitude de p2: ")))
r = 6371.01
d = r*acos(sin*(t1)*sin(t2)+cos(t1)*cos(t2))
print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    d = r*acos(sin*(t1)*sin(t2)+cos(t1)*cos(t2))
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:52:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("latitude de p1: ")))
t2 = radians(float(input("longitude de p1: ")))
t3 = radians(float(input("latitude de p2: ")))
t4 = radians(float(input("longitude de p2: ")))
r = 6371.01
d = r*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2))
print(d)

-- OUTPUT:
6339.20147230493
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:56:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("latitude de p1: ")))
g1 = radians(float(input("longitude de p1: ")))
t2 = radians(float(input("latitude de p2: ")))
g2 = radians(float(input("longitude de p2: ")))
r = 6371.01
d = r*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(d)

-- OUTPUT:
50.43792028752357
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:58:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("latitude de p1: ")))
g1 = radians(float(input("longitude de p1: ")))
t2 = radians(float(input("latitude de p2: ")))
g2 = radians(float(input("longitude de p2: ")))
r = 6371.01
d = r*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))

-- EXECUTION TIME:
0.180403
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
